myteo/test/analyze/type_check/alias/substitution.myte
module Test

type equiv1 = equiv2
type equiv2 = equiv3
type equiv3 = equiv4
type equiv4 = equiv5
type equiv5 = bool

type unitAlias = unit
type intAlias = int
type complex1 = intAlias -> unitAlias
type complex2 = complex1 -> bool
type complex3 = complex1 -> string -> complex2

fun main() {
  (1: equiv1);
  (1: equiv2);
  (1: equiv3);
  (1: equiv4);
  (1: equiv5);
  (true: equiv1);
  (true: equiv2);
  (true: equiv3);
  (true: equiv4);
  (true: equiv5);

  ((): unitAlias);
  (1: unitAlias);
  ((): intAlias);
  (1: intAlias);

  fun complex(
    c1: complex1,
    c2: complex2,
    c3: complex3,
  ) {
    (c1: int);
    (c1: intAlias -> unitAlias);
    (c1: int -> unit);

    (c2: int);
    (c2: (intAlias -> unitAlias) -> bool);
    (c2: (int -> unit) -> bool);
    (c2: int -> unit -> bool);

    (c3: int);
    (c3: (intAlias -> unitAlias) -> string -> ((intAlias -> unitAlias) -> bool));
    (c3: (int -> unit) -> string -> ((int -> unit) -> bool));
    (c3: int -> unit -> string -> int -> unit -> bool);
    (c3: (int -> unit) -> string -> (int -> unit) -> bool);
  }
}